# ethercat2

./: Makefile  deploy  main  runpi.sh
ethercat2/: Makefile  notes.cpp  program  test.cpp
ethercat2/include/: include.h
ethercat2/other/: notes.cpp
ethercat2/src/: Master.hpp  Motor.hpp  a.out  main.cpp  utils.cpp
include/: include.h
other/: CMakeLists.txt  main_old.cpp  notes.cpp
other/cmake/: aarch64-rpi3-linux-gnu.cmake
src/: Master.hpp  Motor.hpp  main.cpp  utils.cpp
